--- a/src/app/contenedor/contenedor.component.html
+++ b/src/app/contenedor/contenedor.component.html
@@ -1,5 +1,5 @@
 <app-nuevolibro (nuevoLibro)="agregarLibroABiblioteca()"></app-nuevolibro> <!--nuevoLibro es el emmiter de nuevolibro, el agregarLibroABiblioteca va a ser la funcion que se ejecutara en le ts del contenedor, el $event es el click de agregar-->
-<app-libreria [libros]='lista'></app-libreria><!--EN EL ARRAY LIBROS DEL componente LIBRERIA iran todos lo que el padre(contenedor) tiene en su varialble/array lista, lo que pase en LISTA automaticamente se modificara en LIBROS--> 
+<app-libreria [libros]='libros'></app-libreria><!--EN EL ARRAY LIBROS DEL componente LIBRERIA iran todos lo que el padre(contenedor) tiene en su varialble/array lista, lo que pase en LISTA automaticamente se modificara en LIBROS--> 
 
 
 <!--IMPORTANTE!!!
