--- a/src/app/libreria/libreria.component.html
+++ b/src/app/libreria/libreria.component.html
@@ -17,8 +17,8 @@
             <td>{{libro.author}}</td>
             <td>{{libro.gender}}</td>
             <!--<td>{{libro.lended}}</td>-->
-            <td><input type="text" placeholder="nombre" id="lended" [value]="libro.lended"></td>
-            <td><button>actualizar</button></td>
+            <td><input type="text" placeholder="nombre" id="{{libro.id}}"  [value]="libro.lended"></td>
+            <td><button (click)="cambiarLended(libro.id)">actualizar</button></td><!--esto-->
         </tr>
     </tbody>
 </table>
