--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  /* background-color: rgb(243, 243, 243);*/
-   background-image: url(images/fondo.jpg);
- }
-h1{
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: url(images/fondo.jpg);
+}
+
+h1 {
   font-family: 'Titan One', cursive;
   color: rgb(39, 34, 12);
 }
-
