--- a/src/app/libreria/libreria.component.html
+++ b/src/app/libreria/libreria.component.html
@@ -25,7 +25,7 @@
                         <td>{{libro.author}}</td>
                         <td>{{libro.gender}}</td>
                         <!--<td>{{libro.lended}}</td>-->
-                        <td><input type="text" placeholder="nombre" id="{{libro.id}}" [value]="libro.lended"></td>
+                        <td><input type="text" placeholder="" id="{{libro.id}}" [value]="libro.lended"></td>
                         <td><button (click)="cambiarLended(libro.id)" class="btn btn-primary">actualizar</button></td>
                     </tr>
                 </tbody>
