--- a/src/app/nuevolibro/nuevolibro.component.html
+++ b/src/app/nuevolibro/nuevolibro.component.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="form-group row">
-                    <label for="lended" class="col-sm-2 col-form-label">Genero</label>
+                    <label for="gender" class="col-sm-2 col-form-label">Genero</label>
                     <div class="col-sm-2">
                         <select name="gender" id="gender" [(ngModel)]="book.gender" class="custom-select mr-sm-2">
                             <option *ngFor="let genero of genders" [value]="genero.id" [name]='genero.name'>{{genero.name}}</option>
