--- a/src/app/nuevolibro/nuevolibro.component.html
+++ b/src/app/nuevolibro/nuevolibro.component.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
 
-                <button class="btn btn-success" type="submit">Agregar</button>
+                <button class="btn btn-sm btn-success" type="submit">Agregar</button>
             </form>
         </div>
     </div>
