se ajusta el tamaño del boton actualizar para que coincida con el tamaño de los td

--- a/src/app/libreria/libreria.component.html
+++ b/src/app/libreria/libreria.component.html
@@ -26,7 +26,7 @@
                         <td>{{libro.gender}}</td>
                         <!--<td>{{libro.lended}}</td>-->
                         <td><input type="text" placeholder="" id="{{libro.id}}" [value]="libro.lended"></td>
-                        <td><button (click)="cambiarLended(libro.id)" class="btn btn-primary">actualizar</button></td>
+                        <td><button (click)="cambiarLended(libro.id)" class="btn btn-sm btn-primary">actualizar</button></td>
                     </tr>
                 </tbody>
             </table>
